--- a/internationalization_pam/lib/l10n/app_pl.arb
+++ b/internationalization_pam/lib/l10n/app_pl.arb
@@ -1,12 +1,8 @@
 {
-    "title": "Test i18n application",
-    "@title": {
-        "description": "title of the application"
-    },
+    "title": "Testowa aplikacja globalizacji",
 
-    "welcome": "Welcome on {date}",
+    "welcome": "Witaj w dniu {date}",
     "@welcome": {
-        "description": "A message with a date parameter",
         "placeholders": {
             "date": {
                 "type": "DateTime",
@@ -15,16 +11,16 @@
         }
     },
 
-    "times": "You have pushed the button:",
+    "times": "Nacisnąłeś ten przycisk:",
     "@times": {},
-    "times2": "{count, plural, =0{zero} =1{one time} other{{count} times}}",
+    "times2": "{count, plural, =0{zero razy} =1{jeden raz} other{{count} razy}}",
     "@times2": {
         "placeholders": {
             "count": {}
         }
     },
 
-    "earnings": "And you have earned {number}",
+    "earnings": "I zarobiłeś {number}",
     "@earnings": {
         "placeholders": {
             "number": {
